[project]
name = "voice-appointment-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "gtts>=2.5.4",
    "openai-agents>=0.2.4",
    "playsound>=1.3.0",
    "psycopg2>=2.9.10",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.42",
]
